edit)Categories body added

--- a/app/views/edit_category.scala.html
+++ b/app/views/edit_category.scala.html
@@ -1,5 +1,12 @@
 @(category: Holders.CategoryGroup)<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-
+<html>
+    <head>
+        <title></title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+    </head>
+    <body>
 
 <form method="post" action="@routes.UploadController.uploadEditedCategory(category.getId())" enctype="multipart/form-data">
 	@for(cat <- category.getCategories() ){
@@ -38,6 +45,7 @@
 
 </form>
 
+        </body>
 <script>
 
 	var i = 0;
