--- a/app/views/upload_category.scala.html
+++ b/app/views/upload_category.scala.html
@@ -1,6 +1,11 @@
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-
-
+<html>
+    <head>
+        <title></title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+    </head>
+    <body>
 <form method="post" action="@routes.UploadController.uploadCategory()" enctype="multipart/form-data">
 	<p>
 		<select id="select" name="lang">
@@ -26,6 +31,8 @@
 	</p>
 
 </form>
+
+    </body>
 
 <script>
 
