--- a/app/views/upload_view.scala.html
+++ b/app/views/upload_view.scala.html
@@ -126,7 +126,7 @@ $.fn.serializeObject = function()
 			
 			$.ajax({
 							type : "POST",
-							url : "/upload/view",
+							url : "view",
 							contentType: "application/json; charset=utf-8",
 							data : obj,
 							success:function (data){
