--- a/app/views/upload_view.scala.html
+++ b/app/views/upload_view.scala.html
@@ -8,7 +8,7 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
-<form id="my_form" class="appnitro">
+<form id="my_form" class="appnitro"  method="post" action="@routes.UploadController.uploadView()">
 	<div class="form_description">
 
 	</div>
