--- a/app/views/upload_view.scala.html
+++ b/app/views/upload_view.scala.html
@@ -115,7 +115,7 @@ $.fn.serializeObject = function()
     });
     return o;
 };
-
+//@uploadUrl
 	$(document).ready(function() {
 		$('#saveForm').click(function(e) {
 
