--- a/app/views/upload_view.scala.html
+++ b/app/views/upload_view.scala.html
@@ -20,6 +20,9 @@
         </script>
     </head>
     <body>
+
+
+            @routes.UploadController.uploadView()
 <form id="my_form" class="appnitro"  method="post" action="@routes.UploadController.uploadView()">
 	<div class="form_description">
 
