--- a/app/views/upload_view.scala.html
+++ b/app/views/upload_view.scala.html
@@ -24,7 +24,7 @@
 
         @routes.UploadController.uploadView()
 <form id="my_form" class="appnitro"  method="post" action="@routes.UploadController.uploadView()">
-    @routes.UploadController.uploadView()
+    "@routes.UploadController.uploadView()"
 	<div class="form_description">
 
 	</div>
