--- a/app/views/upload_view.scala.html
+++ b/app/views/upload_view.scala.html
@@ -6,24 +6,11 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-        <script>
-            //@routes.UploadController.uploadView()
-            function()
-            {
-            //@routes.UploadController.uploadView()
-            }
 
-            $(document).ready(function() {
-            //@routes.UploadController.uploadView()
-            }
-
-        </script>
     </head>
     <body>
 
-
-        @routes.UploadController.uploadView()
-<form id="my_form" class="appnitro"  method="post" action="@routes.UploadController.uploadView()">
+<form id="my_form">
     <div name="@routes.UploadController.uploadView()"/>
     <div name="/romans/upload/view"/>
 
