--- a/app/views/upload_view.scala.html
+++ b/app/views/upload_view.scala.html
@@ -10,9 +10,7 @@
     </head>
     <body>
 
-<form id="my_form">
-    <div name="@routes.UploadController.uploadView()"/>
-    <div name="/romans/upload/view"/>
+<form id="saveForm" method="post">
 
     <div class="form_description">
 
