--- a/app/views/upload_view.scala.html
+++ b/app/views/upload_view.scala.html
@@ -141,7 +141,7 @@ $.fn.serializeObject = function()
 
 			var obj = $("#my_form").serializeObject();
 			obj = JSON.stringify(obj);
-			var url = @routes.UploadController.uploadView();
+			var url = "@routes.UploadController.uploadView()";
 			$.ajax({
 							type : "POST",
 							url : url,
