--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,3 +1,5 @@
+@(categories: Array[Holders.CategoryGroup])
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -45,6 +47,18 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
+
+     <ul>
+
+         @for(category <- categories){
+
+             <li>
+
+                 <img src="/images/@category.getImage()"/>
+                 <p>dsfsd</p>
+             </li>
+         }
+     </ul>
 
 
     <!-- Bootstrap core JavaScript
